--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
                                                                  *outline*
 
 * TASKS
-** Remove registerRequester githubusername argument
-** Remove ~minilock~ keywords from the repo *alper*
 ** TODO Later do, when cache time is completed:
    oc.decline_remote_share(int(<share_id>)) to cancel shared folder at
    end_code or after some time later
@@ -18,17 +16,8 @@
 ** TODO oc may have "owncloud.owncloud.HTTPResponseError: HTTP error: 401" error
 
 ** TODO _colorize_traceback() <= Remove logging // log
-
-** DONE pause => suspend  // unpause => resume
-   CLOSED: [2020-06-01 Mon 13:24]
-
-** DONE check refund()
-** DONE docs/ add quickstart
-   CLOSED: [2020-05-02 Sat 15:42]
-
-   CLOSED: [2020-05-02 Sat 15:26]
-** DONE Comment:
-   #+STARTUP: showall
+** DAWNNech
+  link: https://dawn.cs.stanford.edu/benchmark/
 
 * lib.py
 ** Some code should go into utils.py
@@ -37,4 +26,5 @@
 * NOTES
 ** NOTE: C-c C-t TODO => Done | | C-c / t
 ** /italic/, _underlined_, =verbatim= and ~code~, and, if you must, +strike-through+
+** archive DONE org-archive-subtree
 ** C-c / t || C-c / T DONE
