Updated related to improvements:
- Print colorful "[ ok ]" string

- Change naming for `create_dir` to `mkdir`

- Fix eudat upload in the end.py; fix the upload naming of the file

- Handle `==>` as blue color and `E:` as red color during print

--- a/TODO
+++ b/TODO
@@ -17,7 +17,18 @@
 
 ** TODO _colorize_traceback() <= Remove logging // log
 ** DAWNNech
+
   link: https://dawn.cs.stanford.edu/benchmark/
+** TODO GDOWN
+```
+try
+   ./gdown.pl
+https://drive.google.com/file/d/0B_JzYt91KzCzSm1JaWhrQUk5RmVjWG9YYVhBQXpueFV4ZUJB/edit
+~/junk/alper.mp
+except:
+   gdrive ...
+```
+https://github.com/wkentaro/gdown
 
 * lib.py
 ** Some code should go into utils.py
