--- a/_slurm/README.org
+++ b/_slurm/README.org
@@ -1,29 +1,53 @@
 * SLURM Emulator Mode Setup
 
-1. [Guide1](http://wildflower.diablonet.net/~scaron/slurmsetup.html)
-2. [Guide2](https://slurm.schedmd.com/faq.html#multi_slurmd)
+__ http://wildflower.diablonet.net/~scaron/slurmsetup.html
+__ https://slurm.schedmd.com/faq.html#multi_slurmd
+__ https://stackoverflow.com/a/40707189/2402577
 
 ** Package install
 
 #+begin_src bash
 ./setup.sh
-
 sudo mkdir -p /var/log/slurm
 sudo chown $(whoami) -R /var/log/slurm
 git clone https://github.com/SchedMD/slurm $HOME/slurm
 cd $HOME/slurm
-# In order to emulate a larger cluster
-./configure --enable-debug --enable-multiple-slurmd  # ./configure --enable-front-end
+./configure --enable-multiple-slurmd  # emulator-mode
+# ./configure --enable-debug --enable-front-end --enable-multiple-slurmd
 make
 sudo make install
-sudo cp ~/ebloc-broker/_slurm/emulator_mode/slurm.conf /usr/local/etc/slurm.conf
-sudo cp ~/ebloc-broker/_slurm/emulator_mode/slurmdbd.conf /usr/local/etc/slurmdbd.conf
+sudo cp ~/ebloc-broker/_slurm/confs/slurm.conf /usr/local/etc/slurm.conf
+sudo cp ~/ebloc-broker/_slurm/confs/slurmdbd.conf /usr/local/etc/slurmdbd.conf
 
 sudo chmod 0600 /usr/local/etc/slurmdbd.conf
 sudo chmod 0600 /usr/local/etc/slurm.conf
 sudo chown $(whoami) /usr/local/etc/slurmdbd.conf
 sudo chown munge:munge /etc/munge/munge.key
 sudo chmod 400 /etc/munge/munge.key
+
+sudo systemctl enable slurmctld
+sudo systemctl enable slurmdbd
+sudo systemctl enable munge
+sudo systemctl start munge
+#+end_src
+
+- Example:
+
+#+begin_src conf
+# COMPUTE NODES
+NodeName=cn[01-02] Procs=1 ThreadsPerCore=1 Sockets=1 CoresPerSocket=1 RealMemory=1000 State=UNKNOWN
+# PARTITIONS
+PartitionName=DEFAULT State=UP MaxTime=28-00:00:00 DefaultTime=01:00:00 PreemptMode=REQUEUE Priority=10000 Shared=FORCE:1
+PartitionName=production Default=YES Nodes=cn[01-02]
+--
+# COMPUTE NODES
+NodeName=ebloc[1-2] NodeHostName=localhost NodeAddr=127.0.0.1 CPUs=2
+PartitionName=debug Nodes=ebloc[1-2] Default=YES MaxTime=INFINITE State=UP
+
+# Emulator mode 128 nodes---------------------------------------------------
+NodeName=ebloc[1-2] NodeHostName=ebloc NodeAddr=79.123.177.145 CPUs=1
+PartitionName=debug Nodes=ebloc[1-2] Default=YES MaxTime=INFINITE State=UP
+
 #+end_src
 
 ** Set things up for slurmdbd (the SLURM accounting daemon) in MySQL. !(slurm == $(username))!
