Fix gdrive upload and download.
There was a bug due to files inside emptied trash also be listed. trash=false
added into the gdrive query to fix it.

--- a/broker/gpg/README.org
+++ b/broker/gpg/README.org
@@ -47,3 +47,14 @@ gpg> save
 #+end_src
 
 ~gpg --delete-secret-key <key_id>~
+
+#+begin_src bash
+gpg --list-keys
+gpg --batch --delete-key <key_id>
+
+gpg --list-keys --with-colons --fingerprint  | sed -n 's/^fpr:::::::::\([[:alnum:]]\+\):/\1/p'
+
+for i in `gpg --list-keys --with-colons --fingerprint  | sed -n 's/^fpr:::::::::\([[:alnum:]]\+\):/\1/p'`; do
+    gpg --batch --delete-key "$i"
+done
+#+end_src
