--- a/broker/eudat/README.org
+++ b/broker/eudat/README.org
@@ -1,12 +1,12 @@
-* Mount
+* Eudat
 
-** Linux
+** Linux mount
 
 #+begin_src bash
 sudo mount.davfs https://b2drop.eudat.eu/remote.php/webdav/ /oc
 #+end_src
 
-** GIT Guide:
+** GIT Guide
 
 #+begin_src bash
 git init
@@ -20,9 +20,4 @@ git apply ../patch.txt
 git checkout .  # => undo changes
 #+end_src
 
-
-
-
 [[https://b2access.eudat.eu/saml-idp/saml2idp-web-entry?signInId=4cadb9de-1d0e-4548-ab9b-2a3654066aac][Sign up into B2ACESS EUDAT]]
-
-Note:
