--- a/broker/_slurm/README.org
+++ b/broker/_slurm/README.org
@@ -4,36 +4,11 @@
 - [[https://slurm.schedmd.com/faq.html#multi_slurmd]]
 - [[https://stackoverflow.com/a/40707189/2402577]]
 - [[https://www.hpc.caltech.edu/documentation/slurm-commands]]
-
+- [[https://rolk.github.io/2015/04/20/slurm-cluster]]
 ** Package install
 
 #+begin_src bash
-./setup.sh
-sudo mkdir -p /var/log/slurm
-sudo chown $(whoami) -R /var/log/slurm
-
-# curl -O https://download.schedmd.com/slurm/slurm-21.08.3.tar.bz2
-git clone https://github.com/SchedMD/slurm $HOME/slurm
-cd $HOME/slurm
-git checkout e2e21cb571ce88a6dd52989ec6fe30da8c4ef15f  #slurm-19-05-8-1
-sudo rm -rf /usr/local/lib/slurm/ /tmp/slurmstate/
-make clean
-./configure --enable-debug --enable-front-end  # seems like this also works
-./configure --enable-debug --enable-front-end --enable-multiple-slurmd
-sudo make && sudo make install
-sudo cp ~/ebloc-broker/broker/_slurm/confs/slurm.conf /usr/local/etc/slurm.conf
-sudo cp ~/ebloc-broker/broker/_slurm/confs/slurmdbd.conf /usr/local/etc/slurmdbd.conf
-
-sudo chmod 755 /usr/local/etc/slurmdbd.conf
-sudo chmod 755 /usr/local/etc/slurm.conf
-sudo chown $(whoami) /usr/local/etc/slurmdbd.conf
-sudo chown munge:munge /etc/munge/munge.key
-sudo chmod 400 /etc/munge/munge.key
-
-sudo systemctl enable slurmctld
-sudo systemctl enable slurmdbd
-sudo systemctl enable munge
-sudo systemctl start munge
+~/ebloc-broker/scripts/install_slurm.sh
 #+end_src
 
 #+begin_src bash
@@ -77,10 +52,11 @@ Should run ~sudo slurmdbd~ on the background in order to register the slurm-user
 sudo slurmdbd
 sudo /etc/init.d/mysql start
 sudo su
-mysql -u root -p [ENTER]
+mysql -u root -p [ENTER no passwd required]
 #+end_src
 
 #+begin_src sql
+SET GLOBAL innodb_buffer_pool_size=402653184;
 create database slurm_acct_db;
 CREATE USER 'alper'@'localhost' IDENTIFIED BY '12345';  # 'alper'=> $(whoami)
 grant usage on *.* to 'alper'@'localhost';
@@ -103,7 +79,7 @@ Should run ~sudo slurmdbd~ on the background in order to register the slurm-user
 #+begin_src bash
 sudo slurmdbd && sleep 1
 user_name=$(whoami)
-sacctmgr add cluster $(hostname -s) --immediate
+sacctmgr add cluster eblocbroker --immediate
 sacctmgr add account $user_name --immediate
 sacctmgr create user $user_name defaultaccount=$user_name adminlevel=None --immediate
 #+end_src
