--- a/broker/gpg/README.org
+++ b/broker/gpg/README.org
@@ -50,6 +50,7 @@ gpg> save
 
 #+begin_src bash
 gpg --list-keys
+gpg --delete-key <uid_name>
 gpg --batch --delete-key <key>
 gpg --delete-secret-key <key>
 gpg --list-keys --with-colons --fingerprint  | sed -n 's/^fpr:::::::::\([[:alnum:]]\+\):/\1/p'
