--- a/broker/gdrive/README.org
+++ b/broker/gdrive/README.org
@@ -57,6 +57,7 @@ Open terminal and go to the folder where the ~handerls_drive.go~ is.
 #+begin_src bash
 go get github.com/prasmussen/gdrive  # go install github.com/prasmussen/gdrive@latest
 go build -ldflags "-w -s" && sudo cp gdrive /usr/local/bin/gdrive
+# rm -f ~/.gdrive/token_v2.json
 gdrive about
 #+end_src
 
