--- a/broker/gdrive/README.org
+++ b/broker/gdrive/README.org
@@ -55,6 +55,7 @@ rm -f ~/.gdrive/token_v2.json
 Open terminal and go to the folder where the ~handerls_drive.go~ is.
 
 #+begin_src bash
+go env -w GO111MODULE=auto
 go get github.com/prasmussen/gdrive  # go install github.com/prasmussen/gdrive@latest
 go build -ldflags "-w -s" && sudo cp gdrive /usr/local/bin/gdrive
 # rm -f ~/.gdrive/token_v2.json
