--- a/broker/docker/README.org
+++ b/broker/docker/README.org
@@ -10,24 +10,37 @@ remove_dangling () {
     docker rmi $(docker images -qa -f 'dangling=true')  # --force
     docker image ls
 }
-docker build -t ebloc-broker:latest --progress plain .
+docker build -t eblocbroker:latest --progress plain .
 #+end_src
 
 sudo systemctl start docker
-sudo docker run ebloc-broker
+sudo docker run eblocbroker
 
-docker run --name test -it ebloc-broker bash
-docker run -it ebloc-broker bash
+# docker run --name test -it eblocbroker bash
+docker run -it eblocbroker bash
 
-** clean docker cache
+** Clean complete docker cache
 
 #+begin_src bash
-alias docker_clean_images="docker rmi $(docker images -a --filter=dangling=true -q)"
-alias docker_clean_ps="docker rm $(docker ps --filter=status=exited --filter=status=created -q)"
+alias docker_clean_images="docker rmi $(docker images -a --filter=dangling=true -q) --force"
+alias docker_clean_ps="docker rm $(docker ps --filter=status=exited --filter=status=created -q) --force"
 docker kill $(docker ps -q)
+docker_clean_images
 docker_clean_ps
 docker rmi $(docker images -a -q)
 #+end_src
 
 # https://github.com/SciDAS/slurm-in-docker/blob/master/controller/Dockerfile
 # FROM scidas/slurm.base:19.05.1
+
+** PUSH
+
+NOTE: Now in order to push the image just make sure the path which you are using must have your username included in the tag.
+
+#+begin_src bash
+docker login -u eblocbroker -p <password>
+docker tag eblocbroker:latest eblocbroker/app
+docker push eblocbroker/app
+#+end_src
+
+~docker history --human --format "{{.CreatedBy}}: {{.Size}}" eblocbroker~
