--- a/broker/test_setup/check_list.org
+++ b/broker/test_setup/check_list.org
@@ -1,10 +1,14 @@
+                            *outline*
 
-| tasks            | requester | goo0 | goo1 | goo2 | goo3 |
-|------------------+-----------+------+------+------+------|
-| ebb.tar.gz       |           |      |      |      |      |
-| tx_from_bloxberg |           |      |      |      |      |
-| gdrive_patch     |           |      |      |      |      |
-| mongo_fetch      |           |      |      |      |      |
-|------------------+-----------+------+------+------+------|
+* TASKS
 
-- [] Download test_eblocbroker
+| tasks            | req | goo0 | goo1 | goo2 | goo3 |
+|------------------+-----+------+------+------+------|
+| ebb.tar.gz       |     |      |      |      |      |
+| tx_from_bloxberg | [X] | [X]  | [X]  | [X]  | [X]  |
+| gdrive_patch     | [X] | [X]  | [X]  | [X]  | [X]  |
+| mongo_fetch      |     |      |      |      |      |
+|------------------+-----+------+------+------+------|
+
+- [X] Download test_eblocbroker
+- [X] contract transactions
