--- a/broker/test_setup/README.org
+++ b/broker/test_setup/README.org
@@ -2,7 +2,8 @@
 
 ** gdrive
 
-- For providers download from ~My Driver~ as folders.
+
+- *For providers:* Download from ~My Driver~ as folders.
 :IMPORTANT: DO NOT download from ~Storage~ section, it download ~meta_data.json~ separately.
 
-- For requesters download from ~Storage~ zipped patches.
+- *For requesters:* Download from ~Storage~ zipped patches.
