--- a/broker/test_setup/check_list.org
+++ b/broker/test_setup/check_list.org
@@ -2,13 +2,20 @@
 
 * TASKS
 
+- [X] Download test_eblocbroker
+- [X] contract transactions
+
 | tasks            | req | goo0 | goo1 | goo2 | goo3 |
 |------------------+-----+------+------+------+------|
-| ebb.tar.gz       |     |      |      |      |      |
 | tx_from_bloxberg | [X] | [X]  | [X]  | [X]  | [X]  |
-| gdrive_patch     | [X] | [X]  | [X]  | [X]  | [X]  |
+| ebb.tar.gz       |     |      |      |      |      |
 | mongo_fetch      |     |      |      |      |      |
 |------------------+-----+------+------+------+------|
 
-- [X] Download test_eblocbroker
-- [X] contract transactions
+| patches  | req | goo0 | goo1 | goo2 | goo3 |
+|----------+-----+------+------+------+------|
+| gdrive   | [X] | [X]  | [X]  | [X]  | [X]  |
+| eudat    | []  | []   | []   | []   | []   |
+| ipfs     | []  | []   | []   | []   | []   |
+| ipfs_gpg | []  | []   | []   | []   | []   |
+|----------+-----+------+------+------+------|
